add: export fileSystem in .json, import fileSystem, solution bugs ObjectMapper(SubTypes)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=filebrowser-backend
 
 server.port=9091
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
